// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Theme: jobStreet Tones critical 1`] = `
<div
  class="Box__root backgroundColor__critical borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__critical Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 512 512"
        width="16"
      >
        <path
          d="M489.308 156.341c-12.902-30.484-31.355-57.856-54.861-81.357-23.512-23.501-50.883-41.959-81.377-54.855-31.575-13.353-65.106-20.122-99.65-20.122s-68.066 6.769-99.635 20.122c-30.484 12.902-57.856 31.35-81.357 54.851-23.511 23.501-41.968 50.877-54.865 81.357-13.342 31.575-20.122 65.111-20.122 99.656 0 34.56 6.774 68.080 20.122 99.656 12.902 30.485 31.36 57.856 54.861 81.367s50.877 41.959 81.357 54.856c31.575 13.348 65.096 20.122 99.635 20.122 34.56 0 68.081-6.759 99.656-20.122 30.485-12.902 57.856-31.35 81.372-54.856 23.5-23.5 41.964-50.883 54.861-81.367 13.368-31.58 20.137-65.106 20.137-99.661 0-34.544-6.774-68.076-20.132-99.645zM232.99 371.167h41.334c3.687 0 6.687 2.995 6.687 6.692v41.063c0 3.702-2.995 6.697-6.692 6.697h-41.339c-3.696 0-6.692-2.995-6.692-6.692v-41.063c0-3.702 2.99-6.697 6.686-6.697zM226.304 312.051v-219.587c0-3.697 2.99-6.692 6.686-6.692h41.063c3.707 0 6.707 3 6.707 6.697v219.587c0 3.697-3 6.692-6.707 6.692h-41.063c-3.696 0-6.692-3-6.692-6.692z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__critical fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        critical
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: jobStreet Tones info 1`] = `
<div
  class="Box__root backgroundColor__info borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__white Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 30 30"
        width="16"
        x="0"
        y="0"
      >
        <path
          d="M14.905,21.843c-0.552,0-1-0.447-1-1v-8.236c0-0.552,0.448-1,1-1s1,0.448,1,1v8.236 C15.905,21.396,15.458,21.843,14.905,21.843z"
        />
        <path
          d="M14.905,10.208c-0.552,0-1-0.448-1-1s0.448-1.025,1-1.025s1,0.422,1,0.975v0.051 C15.905,9.76,15.458,10.208,14.905,10.208z"
        />
        <path
          d="M15.001,28.499C7.556,28.499,1.499,22.443,1.499,15c0-7.444,6.057-13.5,13.502-13.5 c7.442,0,13.498,6.056,13.498,13.5C28.499,22.443,22.443,28.499,15.001,28.499z M15.001,3.501C8.659,3.501,3.499,8.66,3.499,15 c0,6.34,5.16,11.499,11.502,11.499c6.34,0,11.498-5.158,11.498-11.499C26.499,8.66,21.341,3.501,15.001,3.501z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__white fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        info
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: seekAnz Tones critical 1`] = `
<div
  class="Box__root backgroundColor__critical borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__critical Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 512 512"
        width="16"
      >
        <path
          d="M489.308 156.341c-12.902-30.484-31.355-57.856-54.861-81.357-23.512-23.501-50.883-41.959-81.377-54.855-31.575-13.353-65.106-20.122-99.65-20.122s-68.066 6.769-99.635 20.122c-30.484 12.902-57.856 31.35-81.357 54.851-23.511 23.501-41.968 50.877-54.865 81.357-13.342 31.575-20.122 65.111-20.122 99.656 0 34.56 6.774 68.080 20.122 99.656 12.902 30.485 31.36 57.856 54.861 81.367s50.877 41.959 81.357 54.856c31.575 13.348 65.096 20.122 99.635 20.122 34.56 0 68.081-6.759 99.656-20.122 30.485-12.902 57.856-31.35 81.372-54.856 23.5-23.5 41.964-50.883 54.861-81.367 13.368-31.58 20.137-65.106 20.137-99.661 0-34.544-6.774-68.076-20.132-99.645zM232.99 371.167h41.334c3.687 0 6.687 2.995 6.687 6.692v41.063c0 3.702-2.995 6.697-6.692 6.697h-41.339c-3.696 0-6.692-2.995-6.692-6.692v-41.063c0-3.702 2.99-6.697 6.686-6.697zM226.304 312.051v-219.587c0-3.697 2.99-6.692 6.686-6.692h41.063c3.707 0 6.707 3 6.707 6.697v219.587c0 3.697-3 6.692-6.707 6.692h-41.063c-3.696 0-6.692-3-6.692-6.692z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__critical fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        critical
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: seekAnz Tones info 1`] = `
<div
  class="Box__root backgroundColor__info borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__white Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 30 30"
        width="16"
        x="0"
        y="0"
      >
        <path
          d="M14.905,21.843c-0.552,0-1-0.447-1-1v-8.236c0-0.552,0.448-1,1-1s1,0.448,1,1v8.236 C15.905,21.396,15.458,21.843,14.905,21.843z"
        />
        <path
          d="M14.905,10.208c-0.552,0-1-0.448-1-1s0.448-1.025,1-1.025s1,0.422,1,0.975v0.051 C15.905,9.76,15.458,10.208,14.905,10.208z"
        />
        <path
          d="M15.001,28.499C7.556,28.499,1.499,22.443,1.499,15c0-7.444,6.057-13.5,13.502-13.5 c7.442,0,13.498,6.056,13.498,13.5C28.499,22.443,22.443,28.499,15.001,28.499z M15.001,3.501C8.659,3.501,3.499,8.66,3.499,15 c0,6.34,5.16,11.499,11.502,11.499c6.34,0,11.498-5.158,11.498-11.499C26.499,8.66,21.341,3.501,15.001,3.501z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__white fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        info
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: seekAsia Tones critical 1`] = `
<div
  class="Box__root backgroundColor__critical borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__critical Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 512 512"
        width="16"
      >
        <path
          d="M489.308 156.341c-12.902-30.484-31.355-57.856-54.861-81.357-23.512-23.501-50.883-41.959-81.377-54.855-31.575-13.353-65.106-20.122-99.65-20.122s-68.066 6.769-99.635 20.122c-30.484 12.902-57.856 31.35-81.357 54.851-23.511 23.501-41.968 50.877-54.865 81.357-13.342 31.575-20.122 65.111-20.122 99.656 0 34.56 6.774 68.080 20.122 99.656 12.902 30.485 31.36 57.856 54.861 81.367s50.877 41.959 81.357 54.856c31.575 13.348 65.096 20.122 99.635 20.122 34.56 0 68.081-6.759 99.656-20.122 30.485-12.902 57.856-31.35 81.372-54.856 23.5-23.5 41.964-50.883 54.861-81.367 13.368-31.58 20.137-65.106 20.137-99.661 0-34.544-6.774-68.076-20.132-99.645zM232.99 371.167h41.334c3.687 0 6.687 2.995 6.687 6.692v41.063c0 3.702-2.995 6.697-6.692 6.697h-41.339c-3.696 0-6.692-2.995-6.692-6.692v-41.063c0-3.702 2.99-6.697 6.686-6.697zM226.304 312.051v-219.587c0-3.697 2.99-6.692 6.686-6.692h41.063c3.707 0 6.707 3 6.707 6.697v219.587c0 3.697-3 6.692-6.707 6.692h-41.063c-3.696 0-6.692-3-6.692-6.692z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__critical fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        critical
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: seekAsia Tones info 1`] = `
<div
  class="Box__root backgroundColor__info borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__white Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 30 30"
        width="16"
        x="0"
        y="0"
      >
        <path
          d="M14.905,21.843c-0.552,0-1-0.447-1-1v-8.236c0-0.552,0.448-1,1-1s1,0.448,1,1v8.236 C15.905,21.396,15.458,21.843,14.905,21.843z"
        />
        <path
          d="M14.905,10.208c-0.552,0-1-0.448-1-1s0.448-1.025,1-1.025s1,0.422,1,0.975v0.051 C15.905,9.76,15.458,10.208,14.905,10.208z"
        />
        <path
          d="M15.001,28.499C7.556,28.499,1.499,22.443,1.499,15c0-7.444,6.057-13.5,13.502-13.5 c7.442,0,13.498,6.056,13.498,13.5C28.499,22.443,22.443,28.499,15.001,28.499z M15.001,3.501C8.659,3.501,3.499,8.66,3.499,15 c0,6.34,5.16,11.499,11.502,11.499c6.34,0,11.498-5.158,11.498-11.499C26.499,8.66,21.341,3.501,15.001,3.501z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__white fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        info
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: wireframe Tones critical 1`] = `
<div
  class="Box__root backgroundColor__critical borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__critical Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 512 512"
        width="16"
      >
        <path
          d="M489.308 156.341c-12.902-30.484-31.355-57.856-54.861-81.357-23.512-23.501-50.883-41.959-81.377-54.855-31.575-13.353-65.106-20.122-99.65-20.122s-68.066 6.769-99.635 20.122c-30.484 12.902-57.856 31.35-81.357 54.851-23.511 23.501-41.968 50.877-54.865 81.357-13.342 31.575-20.122 65.111-20.122 99.656 0 34.56 6.774 68.080 20.122 99.656 12.902 30.485 31.36 57.856 54.861 81.367s50.877 41.959 81.357 54.856c31.575 13.348 65.096 20.122 99.635 20.122 34.56 0 68.081-6.759 99.656-20.122 30.485-12.902 57.856-31.35 81.372-54.856 23.5-23.5 41.964-50.883 54.861-81.367 13.368-31.58 20.137-65.106 20.137-99.661 0-34.544-6.774-68.076-20.132-99.645zM232.99 371.167h41.334c3.687 0 6.687 2.995 6.687 6.692v41.063c0 3.702-2.995 6.697-6.692 6.697h-41.339c-3.696 0-6.692-2.995-6.692-6.692v-41.063c0-3.702 2.99-6.697 6.686-6.697zM226.304 312.051v-219.587c0-3.697 2.99-6.692 6.686-6.692h41.063c3.707 0 6.707 3 6.707 6.697v219.587c0 3.697-3 6.692-6.707 6.692h-41.063c-3.696 0-6.692-3-6.692-6.692z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__critical fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        critical
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Theme: wireframe Tones info 1`] = `
<div
  class="Box__root backgroundColor__info borderColor__default paddingTop__medium paddingRight__gutter paddingBottom__medium paddingLeft__gutter"
>
  <div
    class="Alert__root"
  >
    <div
      class="Alert__icon"
    >
      <svg
        class="width__standardText height__standardText fill__white Box__root borderColor__default marginRight__small"
        height="16"
        viewBox="0 0 30 30"
        width="16"
        x="0"
        y="0"
      >
        <path
          d="M14.905,21.843c-0.552,0-1-0.447-1-1v-8.236c0-0.552,0.448-1,1-1s1,0.448,1,1v8.236 C15.905,21.396,15.458,21.843,14.905,21.843z"
        />
        <path
          d="M14.905,10.208c-0.552,0-1-0.448-1-1s0.448-1.025,1-1.025s1,0.422,1,0.975v0.051 C15.905,9.76,15.458,10.208,14.905,10.208z"
        />
        <path
          d="M15.001,28.499C7.556,28.499,1.499,22.443,1.499,15c0-7.444,6.057-13.5,13.502-13.5 c7.442,0,13.498,6.056,13.498,13.5C28.499,22.443,22.443,28.499,15.001,28.499z M15.001,3.501C8.659,3.501,3.499,8.66,3.499,15 c0,6.34,5.16,11.499,11.502,11.499c6.34,0,11.498-5.158,11.498-11.499C26.499,8.66,21.341,3.501,15.001,3.501z"
        />
      </svg>
    </div>
    <div
      class="Text__block Box__root borderColor__default"
    >
      <span
        class="Text__block color__white fontFamily__text fontSize__standard fontWeight__regular"
        style="transform: none;"
      >
        info
      </span>
    </div>
  </div>
</div>
`;
